crates/assembly/src/snapshots/miden_assembly__tests__assert_eq_with_code.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    basic_block
        eq
        assert(0)
        eq
        assert(15491226248792286710)
        eq
        assert(15491226248792286710)
    end
end
