crates/assembly/src/snapshots/miden_assembly__tests__assert_with_code.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    basic_block
        assert(0)
        assert(15491226248792286710)
        assert(15491226248792286710)
    end
end
