crates/assembly/src/snapshots/miden_assembly__tests__assertz_with_code.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    basic_block
        eqz
        assert(0)
        eqz
        assert(15491226248792286710)
        eqz
        assert(15491226248792286710)
    end
end
