crates/assembly/src/snapshots/miden_assembly__tests__decorators_repeat_one_basic_block.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    basic_block add add mul mul trace(2) end
end
