crates/assembly/src/snapshots/miden_assembly__tests__u32assert2_with_code.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    basic_block
        u32assert2(0)
        u32assert2(15491226248792286710)
        u32assert2(15491226248792286710)
    end
end
